--- a/neural_network/Sequence Labelling with a BiLSTM in PyTorch.ipynb
+++ b/neural_network/Sequence Labelling with a BiLSTM in PyTorch.ipynb
@@ -92,9 +92,9 @@
    "source": [
     "import nltk\n",
     "\n",
-    "train_sents = list(nltk.corpus.conll2002.iob_sents('ned.train'))\n",
-    "dev_sents = list(nltk.corpus.conll2002.iob_sents('ned.testa'))\n",
-    "test_sents = list(nltk.corpus.conll2002.iob_sents('ned.testb'))\n",
+    "train_sents = list(nltk.corpus.conll2002.iob_sents(\"ned.train\"))\n",
+    "dev_sents = list(nltk.corpus.conll2002.iob_sents(\"ned.testa\"))\n",
+    "test_sents = list(nltk.corpus.conll2002.iob_sents(\"ned.testb\"))\n",
     "\n",
     "train_sents[:3]"
    ]
@@ -128,23 +128,30 @@
     "from torchtext.data import Example\n",
     "from torchtext.data import Field, Dataset\n",
     "\n",
-    "text_field = Field(sequential=True, tokenize=lambda x:x, include_lengths=True) # Default behaviour is to tokenize by splitting\n",
-    "label_field = Field(sequential=True, tokenize=lambda x:x, is_target=True)\n",
+    "text_field = Field(\n",
+    "    sequential=True, tokenize=lambda x: x, include_lengths=True\n",
+    ")  # Default behaviour is to tokenize by splitting\n",
+    "label_field = Field(sequential=True, tokenize=lambda x: x, is_target=True)\n",
+    "\n",
     "\n",
     "def read_data(sentences):\n",
     "    examples = []\n",
-    "    fields = {'sentence_labels': ('labels', label_field),\n",
-    "              'sentence_tokens': ('text', text_field)}\n",
-    "    \n",
-    "    for sentence in sentences: \n",
+    "    fields = {\n",
+    "        \"sentence_labels\": (\"labels\", label_field),\n",
+    "        \"sentence_tokens\": (\"text\", text_field),\n",
+    "    }\n",
+    "\n",
+    "    for sentence in sentences:\n",
     "        tokens = [t[0] for t in sentence]\n",
     "        labels = [t[2] for t in sentence]\n",
-    "        \n",
-    "        e = Example.fromdict({\"sentence_labels\": labels, \"sentence_tokens\": tokens},\n",
-    "                             fields=fields)\n",
+    "\n",
+    "        e = Example.fromdict(\n",
+    "            {\"sentence_labels\": labels, \"sentence_tokens\": tokens}, fields=fields\n",
+    "        )\n",
     "        examples.append(e)\n",
-    "    \n",
-    "    return Dataset(examples, fields=[('labels', label_field), ('text', text_field)])\n",
+    "\n",
+    "    return Dataset(examples, fields=[(\"labels\", label_field), (\"text\", text_field)])\n",
+    "\n",
     "\n",
     "train_data = read_data(train_sents)\n",
     "dev_data = read_data(dev_sents)\n",
@@ -228,12 +235,25 @@
     "from torchtext.data import BucketIterator\n",
     "\n",
     "BATCH_SIZE = 32\n",
-    "train_iter = BucketIterator(dataset=train_data, batch_size=BATCH_SIZE, shuffle=True, \n",
-    "                            sort_key=lambda x: len(x.text), sort_within_batch=True)\n",
-    "dev_iter = BucketIterator(dataset=dev_data, batch_size=BATCH_SIZE, \n",
-    "                          sort_key=lambda x: len(x.text), sort_within_batch=True)\n",
-    "test_iter = BucketIterator(dataset=test_data, batch_size=BATCH_SIZE, \n",
-    "                           sort_key=lambda x: len(x.text), sort_within_batch=True)"
+    "train_iter = BucketIterator(\n",
+    "    dataset=train_data,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle=True,\n",
+    "    sort_key=lambda x: len(x.text),\n",
+    "    sort_within_batch=True,\n",
+    ")\n",
+    "dev_iter = BucketIterator(\n",
+    "    dataset=dev_data,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    sort_key=lambda x: len(x.text),\n",
+    "    sort_within_batch=True,\n",
+    ")\n",
+    "test_iter = BucketIterator(\n",
+    "    dataset=test_data,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    sort_key=lambda x: len(x.text),\n",
+    "    sort_within_batch=True,\n",
+    ")"
    ]
   },
   {
@@ -266,36 +286,39 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "EMBEDDING_PATH = os.path.join(os.path.expanduser(\"~\"), \"data/embeddings/fasttext/cc.nl.300.vec\")\n",
+    "EMBEDDING_PATH = os.path.join(\n",
+    "    os.path.expanduser(\"~\"), \"data/embeddings/fasttext/cc.nl.300.vec\"\n",
+    ")\n",
     "\n",
     "\n",
     "def load_embeddings(path):\n",
-    "    \"\"\" Load the FastText embeddings from the embedding file. \"\"\"\n",
+    "    \"\"\"Load the FastText embeddings from the embedding file.\"\"\"\n",
     "    print(\"Loading pre-trained embeddings\")\n",
-    "    \n",
+    "\n",
     "    embeddings = {}\n",
     "    with open(path) as i:\n",
     "        for line in i:\n",
-    "            if len(line) > 2: \n",
+    "            if len(line) > 2:\n",
     "                line = line.strip().split()\n",
     "                word = line[0]\n",
     "                embedding = np.array(line[1:])\n",
     "                embeddings[word] = embedding\n",
-    "    \n",
+    "\n",
     "    return embeddings\n",
-    "    \n",
+    "\n",
     "\n",
     "def initialize_embeddings(embeddings, vocabulary):\n",
-    "    \"\"\" Use the pre-trained embeddings to initialize an embedding matrix. \"\"\"\n",
+    "    \"\"\"Use the pre-trained embeddings to initialize an embedding matrix.\"\"\"\n",
     "    print(\"Initializing embedding matrix\")\n",
     "    embedding_size = len(embeddings[\".\"])\n",
     "    embedding_matrix = np.zeros((len(vocabulary), embedding_size), dtype=np.float32)\n",
-    "                                \n",
-    "    for idx, word in enumerate(vocabulary.itos): \n",
+    "\n",
+    "    for idx, word in enumerate(vocabulary.itos):\n",
     "        if word in embeddings:\n",
-    "            embedding_matrix[idx,:] = embeddings[word]\n",
-    "            \n",
+    "            embedding_matrix[idx, :] = embeddings[word]\n",
+    "\n",
     "    return embedding_matrix\n",
+    "\n",
     "\n",
     "embeddings = load_embeddings(EMBEDDING_PATH)\n",
     "embedding_matrix = initialize_embeddings(embeddings, text_field.vocab)\n",
@@ -327,35 +350,37 @@
     "import torch.nn as nn\n",
     "from torch.nn.utils.rnn import pack_padded_sequence, pad_packed_sequence\n",
     "\n",
-    "class BiLSTMTagger(nn.Module):\n",
     "\n",
-    "    def __init__(self, embedding_dim, hidden_dim, vocab_size, output_size, embeddings=None):\n",
+    "class BiLSTMTagger(nn.Module):\n",
+    "    def __init__(\n",
+    "        self, embedding_dim, hidden_dim, vocab_size, output_size, embeddings=None\n",
+    "    ):\n",
     "        super(BiLSTMTagger, self).__init__()\n",
-    "        \n",
+    "\n",
     "        # 1. Embedding Layer\n",
     "        if embeddings is None:\n",
     "            self.embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
     "        else:\n",
     "            self.embeddings = nn.Embedding.from_pretrained(embeddings)\n",
-    "        \n",
+    "\n",
     "        # 2. LSTM Layer\n",
     "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, bidirectional=True, num_layers=1)\n",
-    "        \n",
+    "\n",
     "        # 3. Optional dropout layer\n",
     "        self.dropout_layer = nn.Dropout(p=0.5)\n",
     "\n",
     "        # 4. Dense Layer\n",
-    "        self.hidden2tag = nn.Linear(2*hidden_dim, output_size)\n",
-    "        \n",
+    "        self.hidden2tag = nn.Linear(2 * hidden_dim, output_size)\n",
+    "\n",
     "    def forward(self, batch_text, batch_lengths):\n",
     "\n",
     "        embeddings = self.embeddings(batch_text)\n",
-    "        \n",
+    "\n",
     "        packed_seqs = pack_padded_sequence(embeddings, batch_lengths)\n",
     "        lstm_output, _ = self.lstm(packed_seqs)\n",
     "        lstm_output, _ = pad_packed_sequence(lstm_output)\n",
     "        lstm_output = self.dropout_layer(lstm_output)\n",
-    "        \n",
+    "\n",
     "        logits = self.hidden2tag(lstm_output)\n",
     "        return logits"
    ]
@@ -387,20 +412,29 @@
     "from sklearn.metrics import precision_recall_fscore_support, classification_report\n",
     "\n",
     "\n",
-    "def remove_predictions_for_masked_items(predicted_labels, correct_labels): \n",
+    "def remove_predictions_for_masked_items(predicted_labels, correct_labels):\n",
     "\n",
     "    predicted_labels_without_mask = []\n",
     "    correct_labels_without_mask = []\n",
-    "        \n",
+    "\n",
     "    for p, c in zip(predicted_labels, correct_labels):\n",
     "        if c > 1:\n",
     "            predicted_labels_without_mask.append(p)\n",
     "            correct_labels_without_mask.append(c)\n",
-    "            \n",
+    "\n",
     "    return predicted_labels_without_mask, correct_labels_without_mask\n",
     "\n",
     "\n",
-    "def train(model, train_iter, dev_iter, batch_size, max_epochs, num_batches, patience, output_path):\n",
+    "def train(\n",
+    "    model,\n",
+    "    train_iter,\n",
+    "    dev_iter,\n",
+    "    batch_size,\n",
+    "    max_epochs,\n",
+    "    num_batches,\n",
+    "    patience,\n",
+    "    output_path,\n",
+    "):\n",
     "    criterion = nn.CrossEntropyLoss(ignore_index=1)  # we mask the <pad> labels\n",
     "    optimizer = optim.Adam(model.parameters())\n",
     "\n",
@@ -413,62 +447,76 @@
     "        predictions, correct = [], []\n",
     "        for batch in tqdm(train_iter, total=num_batches, desc=f\"Epoch {epoch}\"):\n",
     "            optimizer.zero_grad()\n",
-    "            \n",
+    "\n",
     "            text_length, cur_batch_size = batch.text[0].shape\n",
-    "            \n",
-    "            pred = model(batch.text[0].to(device), batch.text[1].to(device)).view(cur_batch_size*text_length, NUM_CLASSES)\n",
-    "            gold = batch.labels.to(device).view(cur_batch_size*text_length)\n",
-    "            \n",
+    "\n",
+    "            pred = model(batch.text[0].to(device), batch.text[1].to(device)).view(\n",
+    "                cur_batch_size * text_length, NUM_CLASSES\n",
+    "            )\n",
+    "            gold = batch.labels.to(device).view(cur_batch_size * text_length)\n",
+    "\n",
     "            loss = criterion(pred, gold)\n",
-    "            \n",
+    "\n",
     "            total_loss += loss.item()\n",
     "\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "\n",
     "            _, pred_indices = torch.max(pred, 1)\n",
-    "            \n",
+    "\n",
     "            predicted_labels = list(pred_indices.cpu().numpy())\n",
-    "            correct_labels = list(batch.labels.view(cur_batch_size*text_length).numpy())\n",
-    "            \n",
-    "            predicted_labels, correct_labels = remove_predictions_for_masked_items(predicted_labels, \n",
-    "                                                                                   correct_labels)\n",
-    "            \n",
+    "            correct_labels = list(\n",
+    "                batch.labels.view(cur_batch_size * text_length).numpy()\n",
+    "            )\n",
+    "\n",
+    "            predicted_labels, correct_labels = remove_predictions_for_masked_items(\n",
+    "                predicted_labels, correct_labels\n",
+    "            )\n",
+    "\n",
     "            predictions += predicted_labels\n",
     "            correct += correct_labels\n",
     "\n",
-    "        train_scores = precision_recall_fscore_support(correct, predictions, average=\"micro\")\n",
+    "        train_scores = precision_recall_fscore_support(\n",
+    "            correct, predictions, average=\"micro\"\n",
+    "        )\n",
     "        train_f_score_history.append(train_scores[2])\n",
-    "            \n",
+    "\n",
     "        print(\"Total training loss:\", total_loss)\n",
     "        print(\"Training performance:\", train_scores)\n",
-    "        \n",
+    "\n",
     "        total_loss = 0\n",
     "        predictions, correct = [], []\n",
     "        for batch in dev_iter:\n",
     "\n",
     "            text_length, cur_batch_size = batch.text[0].shape\n",
     "\n",
-    "            pred = model(batch.text[0].to(device), batch.text[1].to(device)).view(cur_batch_size * text_length, NUM_CLASSES)\n",
+    "            pred = model(batch.text[0].to(device), batch.text[1].to(device)).view(\n",
+    "                cur_batch_size * text_length, NUM_CLASSES\n",
+    "            )\n",
     "            gold = batch.labels.to(device).view(cur_batch_size * text_length)\n",
     "            loss = criterion(pred, gold)\n",
     "            total_loss += loss.item()\n",
     "\n",
     "            _, pred_indices = torch.max(pred, 1)\n",
     "            predicted_labels = list(pred_indices.cpu().numpy())\n",
-    "            correct_labels = list(batch.labels.view(cur_batch_size*text_length).numpy())\n",
-    "            \n",
-    "            predicted_labels, correct_labels = remove_predictions_for_masked_items(predicted_labels, \n",
-    "                                                                                   correct_labels)\n",
-    "            \n",
+    "            correct_labels = list(\n",
+    "                batch.labels.view(cur_batch_size * text_length).numpy()\n",
+    "            )\n",
+    "\n",
+    "            predicted_labels, correct_labels = remove_predictions_for_masked_items(\n",
+    "                predicted_labels, correct_labels\n",
+    "            )\n",
+    "\n",
     "            predictions += predicted_labels\n",
     "            correct += correct_labels\n",
     "\n",
-    "        dev_scores = precision_recall_fscore_support(correct, predictions, average=\"micro\")\n",
-    "            \n",
+    "        dev_scores = precision_recall_fscore_support(\n",
+    "            correct, predictions, average=\"micro\"\n",
+    "        )\n",
+    "\n",
     "        print(\"Total development loss:\", total_loss)\n",
     "        print(\"Development performance:\", dev_scores)\n",
-    "        \n",
+    "\n",
     "        dev_f = dev_scores[2]\n",
     "        if len(dev_f_score_history) > patience and dev_f < max(dev_f_score_history):\n",
     "            no_improvement += 1\n",
@@ -477,14 +525,14 @@
     "            print(\"Saving model.\")\n",
     "            torch.save(model, output_path)\n",
     "            no_improvement = 0\n",
-    "            \n",
+    "\n",
     "        if no_improvement > patience:\n",
     "            print(\"Development F-score does not improve anymore. Stop training.\")\n",
     "            dev_f_score_history.append(dev_f)\n",
     "            break\n",
-    "            \n",
+    "\n",
     "        dev_f_score_history.append(dev_f)\n",
-    "        \n",
+    "\n",
     "    return train_f_score_history, dev_f_score_history"
    ]
   },
@@ -501,28 +549,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(model, test_iter, batch_size, labels, target_names): \n",
-    "    \n",
+    "def test(model, test_iter, batch_size, labels, target_names):\n",
+    "\n",
     "    total_loss = 0\n",
     "    predictions, correct = [], []\n",
     "    for batch in test_iter:\n",
     "\n",
     "        text_length, cur_batch_size = batch.text[0].shape\n",
     "\n",
-    "        pred = model(batch.text[0].to(device), batch.text[1].to(device)).view(cur_batch_size * text_length, NUM_CLASSES)\n",
+    "        pred = model(batch.text[0].to(device), batch.text[1].to(device)).view(\n",
+    "            cur_batch_size * text_length, NUM_CLASSES\n",
+    "        )\n",
     "        gold = batch.labels.to(device).view(cur_batch_size * text_length)\n",
     "\n",
     "        _, pred_indices = torch.max(pred, 1)\n",
     "        predicted_labels = list(pred_indices.cpu().numpy())\n",
-    "        correct_labels = list(batch.labels.view(cur_batch_size*text_length).numpy())\n",
+    "        correct_labels = list(batch.labels.view(cur_batch_size * text_length).numpy())\n",
     "\n",
-    "        predicted_labels, correct_labels = remove_predictions_for_masked_items(predicted_labels, \n",
-    "                                                                               correct_labels)\n",
+    "        predicted_labels, correct_labels = remove_predictions_for_masked_items(\n",
+    "            predicted_labels, correct_labels\n",
+    "        )\n",
     "\n",
     "        predictions += predicted_labels\n",
     "        correct += correct_labels\n",
-    "    \n",
-    "    print(classification_report(correct, predictions, labels=labels, target_names=target_names))"
+    "\n",
+    "    print(\n",
+    "        classification_report(\n",
+    "            correct, predictions, labels=labels, target_names=target_names\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
@@ -966,10 +1021,20 @@
     "OUTPUT_PATH = \"/tmp/bilstmtagger\"\n",
     "num_batches = math.ceil(len(train_data) / BATCH_SIZE)\n",
     "\n",
-    "tagger = BiLSTMTagger(EMBEDDING_DIM, HIDDEN_DIM, VOCAB_SIZE+2, NUM_CLASSES, embeddings=embedding_matrix)  \n",
+    "tagger = BiLSTMTagger(\n",
+    "    EMBEDDING_DIM, HIDDEN_DIM, VOCAB_SIZE + 2, NUM_CLASSES, embeddings=embedding_matrix\n",
+    ")\n",
     "\n",
-    "train_f, dev_f = train(tagger.to(device), train_iter, dev_iter, BATCH_SIZE, MAX_EPOCHS, \n",
-    "                       num_batches, PATIENCE, OUTPUT_PATH)"
+    "train_f, dev_f = train(\n",
+    "    tagger.to(device),\n",
+    "    train_iter,\n",
+    "    dev_iter,\n",
+    "    BATCH_SIZE,\n",
+    "    MAX_EPOCHS,\n",
+    "    num_batches,\n",
+    "    PATIENCE,\n",
+    "    OUTPUT_PATH,\n",
+    ")"
    ]
   },
   {
@@ -1005,15 +1070,15 @@
     "import pandas as pd\n",
     "\n",
     "# Data\n",
-    "df = pd.DataFrame({'epochs': range(0,len(train_f)), \n",
-    "                  'train_f': train_f, \n",
-    "                   'dev_f': dev_f})\n",
-    " \n",
+    "df = pd.DataFrame(\n",
+    "    {\"epochs\": range(0, len(train_f)), \"train_f\": train_f, \"dev_f\": dev_f}\n",
+    ")\n",
+    "\n",
     "# multiple line plot\n",
-    "plt.plot('epochs', 'train_f', data=df, color='blue', linewidth=2)\n",
-    "plt.plot('epochs', 'dev_f', data=df, color='green', linewidth=2)\n",
+    "plt.plot(\"epochs\", \"train_f\", data=df, color=\"blue\", linewidth=2)\n",
+    "plt.plot(\"epochs\", \"dev_f\", data=df, color=\"green\", linewidth=2)\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1086,7 +1151,7 @@
     "labels = sorted(labels, key=lambda x: x.split(\"-\")[-1])\n",
     "label_idxs = [label_field.vocab.stoi[l] for l in labels]\n",
     "\n",
-    "test(tagger, test_iter, BATCH_SIZE, labels = label_idxs, target_names = labels)"
+    "test(tagger, test_iter, BATCH_SIZE, labels=label_idxs, target_names=labels)"
    ]
   },
   {
